<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Signup_Form">
<com.google.android.material.textfield.TextInputLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:focusable="true"
android:focusableInTouchMode="true"
android:textColor="@color/AscentColor">

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/fullName"
    android:ems="10"
    android:inputType="text"
    android:textSize="20sp"
    android:layout_marginTop="5dp"
    android:autofillHints="" />
</com.google.android.material.textfield.TextInputLayout>


<com.google.android.material.textfield.TextInputLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:focusable="true"
android:focusableInTouchMode="true"
android:textColor="@color/AscentColor">

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/Email"
    android:ems="10"
    android:inputType="text"
    android:textSize="20sp"
    android:layout_marginTop="5dp"
    android:importantForAutofill="no" />
</com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:focusable="true"
android:focusableInTouchMode="true"
android:textColor="@color/AscentColor">

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password"
    android:ems="10"
    android:inputType="textPassword"
    android:textSize="20sp"
    android:layout_marginTop="5dp"
    android:importantForAutofill="no" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:focusable="true"
android:focusableInTouchMode="true"
android:textColor="@color/AscentColor">

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/confirmPassword"
    android:ems="10"
    android:inputType="textPassword"
    android:textSize="20sp"
    android:layout_marginTop="5sp"
    android:importantForAutofill="no" />
</com.google.android.material.textfield.TextInputLayout>
<RadioGroup
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:layout_marginTop="10sp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/gender"
    android:textSize="20sp"
    />
<RadioButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/male"
    android:layout_marginLeft="10dp"
    android:textSize="20sp"
    android:layout_marginStart="10dp" />
<RadioButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/female"
    android:textSize="20sp"
    />
</RadioGroup>
<Button
android:layout_width="match_parent"
android:layout_height="60dp"
android:text="@string/register"
android:textSize="20sp"
android:textColor="#ffff"
android:layout_marginTop="40dp"
android:background="@drawable/button_rounded"
    />
    </LinearLayout>