<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Login_form">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="355dp"
        android:layout_height="305dp"
        android:padding="40dp"
        app:srcCompat="@drawable/thumb_picture"
        android:contentDescription="@string/todo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="@color/AscentColor">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:ems="10"
            android:inputType="text"
            android:layout_marginTop="5sp"
            android:textSize="20sp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="@color/AscentColor">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:textSize="22sp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:background="@drawable/button_rounded" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:textSize="22sp"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:background="@drawable/button_rounded"
        android:onClick="btn_signupForm"
        />

</LinearLayout>